--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="color_primary">#039BE5</color>
+    <color name="color_primary_dark">#0277BD</color>
+    <color name="color_accent">#40B3EB</color>
+    <color name="color_button">#0277BD</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
