--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -62,4 +62,81 @@
         android:text="Fetching location"
         android:layout_height="wrap_content" />
 
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_below="@id/address"
+        android:layout_marginTop="20dp"
+        android:id="@+id/divider"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_height="1dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Get stared"
+        android:layout_below="@id/divider"
+        android:id="@+id/get_started"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="250dp"
+        android:text="Create a team"
+        android:id="@+id/create_a_team"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:layout_below="@id/get_started"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@color/color_primary_dark"
+        android:layout_height="60dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_below="@id/create_a_team"
+        android:id="@+id/divider_layout"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_marginLeft="80dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/white"
+            android:layout_height="1dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:text="or"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_weight="1.5"
+            android:layout_height="wrap_content" />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="80dp"
+            android:background="@color/white"
+            android:layout_height="1dp"/>
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="250dp"
+        android:text="Join a team"
+        android:id="@+id/join_a_team"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:layout_below="@id/divider_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@color/color_primary_dark"
+        android:layout_height="60dp" />
+
+
 </RelativeLayout>
