1) Sign in and Sign up with both parse and Facebook 2) Flow of sign in and sign up 3) Welcome screen 4) Partial Create team screen

--- a/app/src/main/res/layout/activity_sign_in_screen.xml
+++ b/app/src/main/res/layout/activity_sign_in_screen.xml
@@ -21,6 +21,7 @@
         android:background="@color/white"
         android:padding="6dp"
         android:id="@+id/email"
+        android:inputType="textEmailAddress"
         android:textSize="16sp"
         android:layout_below="@id/sign_in"
         android:layout_centerHorizontal="true"
@@ -30,6 +31,7 @@
     <EditText
         android:layout_width="250dp"
         android:hint="password"
+        android:inputType="textPassword"
         android:background="@color/white"
         android:padding="6dp"
         android:id="@+id/password"
@@ -87,6 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_below="@id/divider"
         android:layout_centerHorizontal="true"
+        android:id="@+id/login_with_fb"
         android:layout_marginTop="30dp"
         android:background="@drawable/facebook_login_blue"
         android:layout_height="wrap_content" />
