--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -17,10 +17,11 @@
 
     <EditText
         android:layout_width="250dp"
-        android:hint="email"
+        android:hint="name"
         android:background="@color/white"
         android:padding="6dp"
-        android:id="@+id/email"
+        android:id="@+id/name"
+        android:inputType="textCapWords"
         android:textSize="16sp"
         android:layout_below="@id/sign_up"
         android:layout_centerHorizontal="true"
@@ -29,9 +30,23 @@
 
     <EditText
         android:layout_width="250dp"
+        android:hint="email"
+        android:background="@color/white"
+        android:padding="6dp"
+        android:id="@+id/email"
+        android:inputType="textEmailAddress"
+        android:textSize="16sp"
+        android:layout_below="@id/name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:layout_width="250dp"
         android:hint="password"
         android:background="@color/white"
         android:padding="6dp"
+        android:inputType="textPassword"
         android:id="@+id/password"
         android:textSize="16sp"
         android:layout_below="@id/email"
@@ -88,6 +103,7 @@
         android:layout_below="@id/divider"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
+        android:id="@+id/login_with_fb"
         android:background="@drawable/facebook_login_blue"
         android:layout_height="wrap_content" />
 
