--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:text="Welcome"
         android:id="@+id/welcome"
-        android:textSize="32sp"
+        android:textSize="28sp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:textColor="@color/white"
@@ -21,7 +21,7 @@
         android:layout_below="@+id/welcome"
         android:text="Kavin Varnan"
         android:layout_centerHorizontal="true"
-        android:textSize="40sp"
+        android:textSize="36sp"
         android:textColor="@color/white"
         android:id="@+id/name"
         android:layout_marginTop="16dp"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:text="to"
         android:layout_below="@id/name"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="@color/white"
         android:layout_marginTop="8dp"
         android:id="@+id/to"
@@ -44,7 +44,7 @@
         android:layout_below="@id/to"
         android:text="Social Evening"
         android:layout_centerHorizontal="true"
-        android:textSize="36sp"
+        android:textSize="32sp"
         android:textColor="@color/white"
         android:id="@+id/social_evening"
         android:layout_marginTop="16dp"
@@ -79,7 +79,7 @@
         android:id="@+id/get_started"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textColor="@color/white"
         android:layout_height="wrap_content" />
 
@@ -88,7 +88,7 @@
         android:text="Create a team"
         android:id="@+id/create_a_team"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_below="@id/get_started"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
@@ -128,10 +128,10 @@
 
     <Button
         android:layout_width="250dp"
-        android:text="Join a team"
-        android:id="@+id/join_a_team"
+        android:text="Take me home"
+        android:id="@+id/take_me_home"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_below="@id/divider_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
