--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,5 +18,18 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="HomeTabs" parent="Widget.Design.TabLayout">
+        <item name="tabMaxWidth">@dimen/tab_max_width</item>
+        <item name="tabIndicatorColor">#ffffff</item>
+        <item name="tabIndicatorHeight">4dp</item>
+        <item name="tabTextAppearance">@style/HomeTabTextAppearance</item>
+        <item name="tabSelectedTextColor">#ffffff</item>
+    </style>
+
+    <style name="HomeTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="textAllCaps">false</item>
+    </style>
 
 </resources>
