--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -15,10 +15,10 @@
         app:tabMode="scrollable" />
 
     <android.support.v4.view.ViewPager
+        android:layout_below="@id/sliding_tabs"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:background="@android:color/white" />
 
 </RelativeLayout>
