--- a/app/src/main/res/layout/fragment_my_teams.xml
+++ b/app/src/main/res/layout/fragment_my_teams.xml
@@ -1,24 +1,63 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.kavin.socialevening.fragment.MyTeamsFragment">
+
     <TextView
-        android:layout_width="wrap_content"
-        android:text="testing"
-        android:layout_height="wrap_content" />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/myFAB"
+        android:id="@+id/my_teams"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/color_primary"
-        android:src="@drawable/ic_add_white"
+        android:layout_margin="12dp"
+        android:text="My Teams"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/my_teams"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@color/divider_grey" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_below="@id/divider"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:id="@+id/progress_bar"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:id="@+id/no_item"
+            android:padding="28dp"
+            android:visibility="gone"
+            android:gravity="center"
+            android:text="You don't have any team. Go ahead and create a team by pressing the add button"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/my_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        app:elevation="4dp"/>
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_add_white"
+        app:backgroundTint="@color/color_primary"
+        app:elevation="4dp" />
 
 </RelativeLayout>
