--- a/app/src/main/res/layout/activity_challenge_screen.xml
+++ b/app/src/main/res/layout/activity_challenge_screen.xml
@@ -85,6 +85,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
             android:layout_height="match_parent">
 
             <android.support.v4.view.ViewPager
@@ -93,7 +94,6 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/button"
                 android:layout_alignParentTop="true"
-                android:layout_below="@id/sliding_tabs"
                 android:background="@android:color/white" />
 
             <Button
