--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,50 +6,10 @@
     android:background="@color/color_primary"
     tools:context=".SplashScreen">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
-        android:text="@string/splash_intro_text"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:textSize="18sp"
-        android:textColor="@color/white"
+        android:layout_centerInParent="true"
+        android:src="@drawable/big_icon"
         android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:id="@+id/already_have_account_layout"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:text="@string/already_have_account"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:textSize="16sp"
-            android:id="@+id/sign_in"
-            android:textColor="#022d93"
-            android:text="@string/sign_in"
-            android:layout_marginLeft="8dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <Button
-        android:layout_width="200dp"
-        android:text="Sign Up"
-        android:id="@+id/sign_up"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_above="@id/already_have_account_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:background="@color/color_primary_dark"
-        android:layout_height="60dp" />
 
 </RelativeLayout>
